Making it pip installable

--- a/tiana/metrics_plotter/metrics_note.ipynb
+++ b/tiana/metrics_plotter/metrics_note.ipynb
@@ -24,12 +24,11 @@
    },
    "cell_type": "code",
    "source": [
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "%matplotlib inline\n",
     "\n",
-    "import file_organizers.file_reading as fr\n",
-    "import threshold_metrics as tm\n",
-    "import metrics_plotting as mp"
+    "import tiana.file_organizers.file_reading as fr\n",
+    "from tiana.metrics_plotter import threshold_metrics as tm, metrics_plotting as mp"
    ],
    "id": "7f655cba0d8ef2b6",
    "outputs": [],
